<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvNombre" />

    <EditText
        android:id="@+id/edNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_below="@id/tvNombre"
        android:text="@string/edNombre" />
    <TextView
        android:id="@+id/tVApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edNombre"
        android:text="@string/tvApellido" />
    <EditText
        android:id="@+id/edApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_below="@id/tVApellido"
        android:text="@string/edApellido" />

    <TextView
        android:id="@+id/edad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edApellido"
        android:text="@string/tvedad" />


    <EditText
        android:id="@+id/NumEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@id/edad"
        android:inputType="numberDecimal"
        />

    <TextView
        android:id="@+id/tvGenero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/NumEdad"
        android:text="@string/tvGenero" />

    <RadioGroup
        android:id="@+id/RG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvGenero">

        <RadioButton
            android:id="@+id/rbfeminino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbfeminino"
            android:checked="true"
            />
        <RadioButton
            android:id="@+id/rbMasculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbMasculino"
            />

    </RadioGroup>
    <TextView
        android:id="@+id/tvEstadoCivil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/RG"
        android:text="@string/tvEstado" />

    <Spinner
        android:id="@+id/spinnerEstadoCivil"
        android:layout_width="match_parent"
        android:layout_below="@id/tvEstadoCivil"
        android:layout_height="wrap_content" />
    <Switch
        android:id="@+id/switchHijos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerEstadoCivil"
        android:text="@string/tvHijos" />
    <Button
        android:id="@+id/btnValidar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/switchHijos"
        android:text="@string/btnValidar" />

    <Button
        android:id="@+id/btnBorrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnValidar"
        android:text="@string/btnBorrar" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnBorrar"
        android:text="@string/str_button" />
</LinearLayout>


</ScrollView>



</RelativeLayout>